--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -32,7 +32,7 @@
                 <a href="/">An existentialist's take on startups and growth.</a>
             </h4>
             <p class="credits">Written by <span class="h6">Davis Clark</span></p>
-            <a href="//www.linkedin.com/in/davisclark" target="_blank">
+            <a href="//www.linkedin.com/in/davissclark" target="_blank">
                 <img src="{{ grav }}" class="img-thumbnail" id="grav"/>
             </a>
             <ul class="list-unstyled contact-list">
