--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -40,7 +40,7 @@
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
                 </li>
                 <li class="option">
-                    <p>Twitter:<a href="http://www.twitter.com/davissclark"> @davissclark</a></p>
+                    <p>GitHub:<a href="https://github.com/davissclark"> @davissclark</a></p>
                 </li>
             </ul>
         </section>
