--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,6 +37,9 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
+                    <a href="tel:+19524122874">Sweet Samantha, how you torture me so!</a>
+                </li>
+                <li class="option">
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
                 </li>
                 <li class="option">
