--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,7 +37,7 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
-                    <a href="tel:+19524122874">Sweet Samantha, how you torture me so!</a>
+                    <a href="tel:+19524122874">Sweet Samantha, how you torture me so! Give me one shot, and I'll charm off your socks.</a>
                 </li>
                 <li class="option">
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
