--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,7 +37,7 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
-                    <a href="tel:+19524122874">Sweet Samantha, how you torture me so! Given one shot at a long talk and walk, I will literally charm off your shoes and your socks.</a>
+                    <a href="tel:+19524122874">Sweet Samantha, how you torture me so! Given the shot, with a long talk and walk, I will literally charm off your shoes and your socks.</a>
                 </li>
                 <li class="option">
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
