--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -39,6 +39,8 @@
                 <li class="option">
                     <a href="tel:+19524122874">Sweet Samantha, how you torture me so! Given the shot, with a long talk and walk, I will literally charm off your shoes and your socks.</a>
                     <br/>
+                    ^ *click* ^
+                    <br/>
                 </li>
                 <li class="option">
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
