--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,10 +37,14 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
+                    <p>Hey do you think he made a long delay before the text fade-in on purpose? Like to symbolize silence, maybe?</p>
+                    <br/>
+                    <p>*turns the music up in the headphones*</p>
+                    <br/>
                     <a href="//www.silentsamantha.com">It's done.</a>
                     <br/>
                     <p>^ *click* ^</p>
-                    <br/>              
+                    <br/>           
                 </li>               
                 <li class="option">
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
