--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,13 +37,14 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
-                    <p>Hey do you think he made a long delay before the text fade-in on purpose? Like to symbolize silence, maybe?</p>
+                    <p>Do you think he chose a long delay before the text fade-in on purpose? Like to symbolize silence, maybe?</p>
                     <br/>
                     <p>*turns the music up in the headphones*</p>
                     <br/>
                     <a href="//www.silentsamantha.com">It's done.</a>
                     <br/>
                     <p>^ *click* ^</p>
+                    <p>(iOS will not support audio)</p>
                     <br/>           
                 </li>               
                 <li class="option">
