--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -43,7 +43,7 @@
                     <br/>
                     <a href="//www.silentsamantha.com">It's done.</a>
                     <br/>
-                    <p>(iOS will not support audio)</p>
+                    <p>^*click*^</p>
                     <br/>           
                 </li>               
                 <li class="option">
