--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,12 +37,12 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
-                    <p>Do you think he chose a long delay before the text fade-in on purpose? Like to symbolize silence, maybe?</p>
-                    <br/>
+                    <p>Do you think he chose that long delay before the text fade-in on purpose? Like maybe to symbolize silence?</p>
                     <p>*turns the music up in the headphones*</p>
                     <br/>
                     <a href="//www.silentsamantha.com">It's done.</a>
                     <br/>
+                    <p>^*click*^</p>
                     <br/>           
                 </li>               
                 <li class="option">
