--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -38,7 +38,7 @@
             <ul class="list-unstyled contact-list">
                 <li class="option">
                     <p>Do you think he chose that long delay before the text fade-in on purpose? Like maybe to symbolize silence?</p>
-                    <p>*turns the music up in the headphones*</p>
+                    <p>*turns the music up in his headphones*</p>
                     <br/>
                     <a href="//www.silentsamantha.com">It's done.</a>
                     <br/>
