--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,7 +37,7 @@
             </a>
             <ul class="list-unstyled contact-list">
                 <li class="option">
-                    <p>Do you think he chose that long delay before the text fade-in on purpose? Like maybe to symbolize silence?</p>
+                    <p>Do you think he chose that long gap before the text fades in on purpose? Like to symbolize silence maybe?</p>
                     <p>*turns the music up in his headphones*</p>
                     <br/>
                     <a href="//www.silentsamantha.com">It's done.</a>
