--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -86,8 +86,8 @@
 {% block scripts %}
 <script>
     $('#link').click(function () {
-        $(this).hide();
-        setTimeout(function () { $("#mess").html("<p>*takes a bow*</p>").hide().fadeIn(500); }, 500);
+        $("#mess").hide();
+        setTimeout(function () { $("#mess").html("<p>*takes a bow*</p>").fadeIn(500); }, 500);
     });
 </script>
 <script src="{{ url_for('static', filename='scripts/showdown.js') }}"></script>
