--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -35,14 +35,14 @@
             <a href="//www.linkedin.com/in/davissclark" target="_blank">
                 <img src="{{ grav }}" class="img-thumbnail" id="grav"/>
             </a>
-            <ul class="list-unstyled contact-list">
-                <li id = "mess" class="option">
-                    <br/>
-                    <a id = "link" href="">It's done.</a>
-                    <br/>
-                    <p>^*click*^</p>
-                    <br/>           
-                </li>               
+            <li id = "mess">
+                <br/>
+                <a id = "link" href="">It's done.</a>
+                <br/>
+                <strong>^*click*^</strong>
+                <br/>           
+            </li>
+            <ul class="list-unstyled contact-list">               
                 <li class="option">
                     Email:<a href="mailto:davissclark@gmail.com"> davissclark@gmail.com</a>
                 </li>
@@ -91,7 +91,7 @@
 </script>
 <script src="{{ url_for('static', filename='scripts/showdown.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
-
+<script src="{{ url_for('static', filename='scripts/blog.js') }}"></script>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 var disqus_shortname = 'existentialvisionblog'; // required: replace example with your forum shortname
