--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -36,7 +36,7 @@
                 <img src="{{ grav }}" class="img-thumbnail" id="grav"/>
             </a>
             <ul class="list-unstyled contact-list">        
-                <li id = "mess">
+                <li id = "mess" class = "option">
                     <br/>
                     <a id = "link" href="">It's done.</a>
                     <br/>
