--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -40,7 +40,7 @@
                     <br/>
                     <a>It's done.</a>
                     <br/>
-                    <strong>^*click*^</strong>
+                    ^*click*^
                     <br/>           
                     <br/>
                 </li>
